# refractum

./: .SRCINFO  .gitattributes  .gitignore  CHANGELOG.md  PKGBUILD  README.md  io.github.Labaman.refractum.desktop  pyproject.toml  refract.desktop  refractum.install
.github/: cspell.json  flake8.ini  lint.markdownlint-cli2.yaml
.github/workflows/: aur.yml  build.yml  docs.yml  pylint.yml
refract/: __init__.py  __main__.py  arch_mirrors.py  config.py  country_detect.py  distros.py  mirrorlist.py  models.py  rank_info.py  ranker.py  reflector.py
refract/gui/: arch_progress.py  distro_progress.py  main_window.py  preview.py  progress.py
refractum/: __init__.py  __main__.py  arch_mirrors.py  config.py  country_detect.py  distros.py  models.py  rank_info.py  ranker.py
refractum/gui/: arch_progress.py  distro_progress.py  main_window.py  preview.py  widgets.py
