[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refract"
version = "1.5.2"
description = "Simple GUI for ranking Arch Linux and distro-specific pacman mirrors"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[project.scripts]
refract = "refract.__main__:main"
refract-rank = "refract.rank_info:main"

[tool.hatch.build.targets.wheel]
packages = ["refract"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B"]
ignore = ["E203", "E402", "E221", "E701", "B905"]
