[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refractum"
version = "1.6.1"
description = "Simple GUI for ranking Arch Linux and distro-specific pacman mirrors"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "requests",
]

[project.scripts]
refractum = "refractum.__main__:main"
refractum-rank = "refractum.rank_info:main"

[tool.hatch.build.targets.wheel]
packages = ["refractum"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "B"]
ignore = ["E203", "E402", "E221", "E701", "B905"]
